<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xwinga</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_repartition">RepartitionActivity</string>
    <string name="title_activity_xwing_repartition">XwingRepartitionActivity</string>
    <string name="title_activity_xwing_repartition_activity_step1">XWingRepartitionActivityStep1</string>
    <string name="logo_description">X-Wing android</string>
    <string name="baseline">Créateur d\'escadron d\'élite depuis 2013</string>
    <string name="menu1">Générer les équipes</string>
    <string name="back">Menu</string>
    <string name="next">Suivant</string>
    <string name="title_activity_xwing_repartition_step2">XWingRepartitionStep2</string>
    <string name="tobecontinued">To be continued...</string>

</resources>