<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/stars"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".XwingMainActivity" >


    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:onClick="backMainMenu"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+acountcreation/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_xwing_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/baseline"
        android:textColor="#FFFFFF" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="350dp"
        android:text="@string/tobecontinued"
        android:textSize="30sp"
        android:textColor="#edb800" />


</LinearLayout>