<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/stars"
    tools:context=".XwingMainActivity" >

    
	<ImageView android:layout_width="fill_parent" android:id="@+acountcreation/title" 
		android:layout_height="wrap_content"
		android:src="@drawable/logo_xwing"
		android:layout_marginTop="150dp"
		android:contentDescription="@string/logo_description" />
	
	<TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
		android:text="@string/baseline"
		android:textColor="#FFFFFF"
		android:paddingTop="10dp"
		android:layout_gravity="center_horizontal"
		android:textSize="20sp" />
	
	<Button android:layout_width="fill_parent"
	    android:id="@+acountcreation/connect"
		android:layout_height="wrap_content"
		android:text="@string/menu1" android:layout_marginTop="150dp" 
		android:layout_gravity="center"
		android:onClick="start_repartition"
		android:textColor="#000000"
		android:padding="40dp"
		android:textSize="30sp" />

</LinearLayout>
